# ethercrab_test

./: Cargo.toml  NOTES.md
ethercrab-wire/: Cargo.toml
ethercrab-wire-derive/: Cargo.toml
ethercrab-wire-derive/src/: generate_struct.rs  lib.rs  parse_struct.rs
ethercrab-wire/src/: error.rs  impls.rs  lib.rs
examples/: ek1100.rs  multiple-groups.rs
src/: al_control.rs  dc.rs  dl_status.rs  error.rs  ethernet.rs  fmt.rs  generate.rs  lib.rs  maindevice.rs  maindevice_config.rs  pdi.rs  register.rs  sync_manager_channel.rs  timer_factory.rs
src/coe/: services.rs
src/command/: mod.rs  reads.rs  writes.rs
src/eeprom/: device_provider.rs  mod.rs  types.rs
src/pdu_loop/: frame_header.rs  mod.rs  pdu_flags.rs  pdu_header.rs  pdu_rx.rs  pdu_tx.rs  storage.rs
src/pdu_loop/frame_element/: created_frame.rs  frame_box.rs  mod.rs  received_frame.rs  receiving_frame.rs  sendable_frame.rs
src/std/: mod.rs  windows.rs
src/std/unix/: linux.rs  mod.rs
src/subdevice/: configuration.rs  eeprom.rs  mod.rs  ports.rs  types.rs
src/subdevice_group/: group_id.rs  handle.rs  mod.rs
